--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
-    "next": "15.3.3",
+    "next": "^16.1.5",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.13.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.5.2",
     "recharts": "^2.15.4",
