--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grapesjs/react": "^2.0.0",
     "@grapesjs/studio-sdk": "^1.0.57",
     "@grapesjs/studio-sdk-plugins": "^1.0.32",
     "@hookform/resolvers": "^5.2.2",
